# pyGifi

./: .gitignore  CHANGELOG.md  Gifi_test.R  LICENSE  MANIFEST.in  README.md  Test.py  check_data.py  compare_test.py  diag_gifi.R  gifi_deterministic.R  init_x.csv  init_x_r.csv  master_analysis.py  plot.py  pyGifi_test.py  py_homals_objectscores.csv  py_morals_beta.csv  py_princals_loadings.csv  pyproject.toml  setup.py
.github/workflows/: ci.yml  lint.yml  publish.yml  test.yml  typecheck.yml
PyGifi2/: Test.py
analysis/: analyze.py  get_r_transforms.R
analysis/r_transforms/: r_transform_bike_dataset.csv  r_transform_car_dataset.csv
docs/: api.md  gifi_theory.ipynb  homals_tutorial.ipynb  morals_tutorial.ipynb  princals_tutorial.ipynb  theory.md  tutorial.md  validation.md
examples/: homals_example.ipynb  morals_example.ipynb  princals_example.ipynb
pygifi/: __init__.py  _coding.py  _engine.py  _isotone.py  _linalg.py  _prepspline.py  _splines.py  _structures.py  _utilities.py  cv.py  datasets.py  homals.py  morals.py  plot.py  princals.py
pygifi/core/: cv.py  engine.py  linalg.py  structures.py
pygifi/data/: ABC.csv  WilPat2.csv  galo.csv  gubell.csv  hartigan.csv  house.csv  mammals.csv  neumann.csv  roskam.csv  senate07.csv  sleeping.csv  small.csv
pygifi/models/: addals.py  canals.py  corals.py  criminals.py  homals.py  impute.py  morals.py  overals.py  primals.py  princals.py
pygifi/rng/: pygifi_rng.c  setup_rng.py  temp.c
pygifi/utils/: _cone.py  coding.py  isotone.py  prepspline.py  splines.py  utilities.py
pygifi/visualization/: plot.py
tests/: test_coding.py  test_cv.py  test_datasets.py  test_engine.py  test_homals.py  test_impute.py  test_isotone.py  test_linalg.py  test_morals.py  test_parity.py  test_plot.py  test_plot2.py  test_plot_unified.py  test_princals.py  test_r_parity_full.py  test_rng_parity.py  test_sparse_indicator.py  test_splines.py  test_stats.py  test_structures.py  test_utilities.py
tests/fixtures/: ABC.csv  galo.csv  galo_na.csv  generate_fixtures.R  hartigan.csv  homals_hartigan.json  missing_a.json  missing_m.json  missing_s.json  morals_monotone.json  morals_neumann.json  morals_spline.json  neumann.csv  princals_abc.json  princals_copies.json  princals_passive.json  ties_p.json
validation/: preprocess_datasets.py  report.py
validation/compare/: compare_results.py  final_report_stdout.txt  pca_comparison.py  visualize_distributions.py
validation/datasets/: bike_dataset.csv  car_dataset.csv
validation/datasets/processed/: USA_cars_datasets.csv  bike_dataset.csv  car_dataset.csv  gifi_transformed_USA_cars_datasets.csv  pygifi_transformed_USA_cars_datasets.csv
validation/python_scripts/: run_pygifi.py
validation/r_scripts/: run_gifi.R
validation/results/: comparison_report.txt  comparison_summary.csv
