[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygifi"
version = "0.1.0"
description = "Python port of the R Gifi library for Multivariate Analysis with Optimal Scaling"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Python port of Gifi (Mair, De Leeuw, Groenen)"}
]
keywords = [
    "optimal scaling",
    "categorical pca",
    "princals",
    "homals",
    "morals",
    "multiple correspondence analysis",
    "data preprocessing",
    "machine learning"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pandas-stubs>=2.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[project.urls]
Homepage = "https://github.com/cran/Gifi"
"Original R Package" = "https://cran.r-project.org/package=Gifi"
"Bug Tracker" = "https://github.com/cran/Gifi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pygifi*"]
