[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygifi"
version = "0.1.0"
description = "Python port of the R Gifi library for Multivariate Analysis with Optimal Scaling"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    {name = "Sanjeev", email = "sanjeev06-cyber@users.noreply.github.com"}
]
keywords = [
    "optimal scaling",
    "categorical pca",
    "princals",
    "homals",
    "morals",
    "multiple correspondence analysis",
    "data preprocessing",
    "machine learning"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
# Optional Numba JIT acceleration for the PAVA isotone regression loop
accelerate = [
    "numba>=0.56",
]
# Development & testing tools
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "flake8>=6.0",
    "pandas-stubs>=2.0",
    "build>=0.10",
    "twine>=4.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[project.urls]
Homepage = "https://github.com/sanjeev06-cyber/Pygifi"
Documentation = "https://github.com/sanjeev06-cyber/Pygifi/blob/main/docs/tutorial.md"
"Bug Tracker" = "https://github.com/sanjeev06-cyber/Pygifi/issues"
"Original R Package" = "https://cran.r-project.org/package=Gifi"

[tool.setuptools.packages.find]
where = ["."]
include = ["pygifi*"]
